fix(overlay-modal): add z-index

--- a/src/components/Dropdown/BaseDropdown/styles.scss
+++ b/src/components/Dropdown/BaseDropdown/styles.scss
@@ -6,6 +6,7 @@
     position: relative;
     width: var(--width);
     max-width: var(--width);
+    background-color: white;
     &.opened {
         .base-dropdown-field {
             background-color: rgba(var(--accent-color), .05);
