--- a/src/components/Modal/OverlayModal/style.scss
+++ b/src/components/Modal/OverlayModal/style.scss
@@ -9,6 +9,7 @@
     right: 0;
     left: 0;
     bottom: 0;
+    z-index: 99;
     background-color: rgba(0, 0, 0, .4);
     .overlay-model-content {
         position: relative;
